--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
