--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.14",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
