--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
